---
source: src/materialization/sql.rs
expression: err.to_string()
---
There are projections that are incompatible with the materialization of type 'postgres':
Cannot create SQL table columns for json fields that hold mixed data types.Each projected field must hold only one data type (besides null). Consider either removing these fields from your projections, or updating your schema so that they will always have a single known type.:
	field_name: 'boolCol', location_ptr: '/boolCol', possible_types: ["boolean", "object"], source: user provided
	field_name: 'objCol', location_ptr: '/objCol', possible_types: ["integer", "object"], source: user provided
Cannot create SQL table columns with names longer than 63 bytes because that is the maximum length supported by postgres:
	field_name: 'ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff', location_ptr: '/intCol', possible_types: ["integer"], source: user provided
	field_name: 'gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg', location_ptr: '/numCol', possible_types: ["integer"], source: user provided

